--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Project</title>
+    <title>Akinola Victor's Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="Micro.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="content" id="portfolio">
-        <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light" id="Portfolio">
+    <div class="container_2" id="portfolio">
+        <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light " id="Portfolio">
             <div class="container-fluid px-4">
                 <a class="navbar-brand text-primary fw-semibold fs-4" href="#">iam AkinolaVictor</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
@@ -24,7 +24,8 @@
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="top-navbar" aria-labelledby="top-navbar">
                     <div class="offcanvas-header">
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-lg-auto p-3">
@@ -46,50 +47,60 @@
             </div>
         </nav>
 
+
+
         <!-- page content start here -->
-        <div class="containers mobilevw">
-            <div class="contents ">
-                <div class="scroll-content noDisplay px-5">
-                    <div class="scroll-content-container">
-                        <h1 class="fw-semibold  scroll-content-container-text ">I am</h1>
-                        <ul class="scroll-content-container-list">
-                            <li class="scroll-content-container-list-item fs-1">Akinola Victor</li>
-                            <li class="scroll-content-container-list-item fs-1">Glad to meet you!</li>
-                        </ul>
+        <div class="image_set">
+            <div class="containers ">
+                <div class="contents ">
+                    <div class="portfolio-wrapper">
+                        <div class="moving-shadow-ring">
+                            <img src="/img/me.jpg" alt="my_picture" class="portfolio-img">
+                        </div>
                     </div>
-                </div>
-                <!-- desktop view here -->
-                <div>
-                    <div class="yesDisplay">
-                        <div class="wrapper">
-                            <div class="static-text">I am</div>
-                            <div class="dynamic-text">
-                                <li><span>Akinola Victor</span></li>
-                                <li><span>Glad to meet you!</span></li>
+                    <div class="scroll-content noDisplay px-5">
+                        <div class="scroll-content-container">
+                            <h1 class="fw-semibold  scroll-content-container-text ">I am</h1>
+                            <ul class="scroll-content-container-list">
+                                <li class="scroll-content-container-list-item fs-1">Akinola Victor</li>
+                                <li class="scroll-content-container-list-item fs-1">Glad to meet you!</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- desktop view here -->
+                    <div>
+                        <div class="yesDisplay">
+                            <div class="wrapper">
+                                <div class="static-text">I am</div>
+                                <div class="dynamic-text">
+                                    <li><span>Akinola Victor</span></li>
+                                    <li><span>Glad to meet you!</span></li>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="last-screen text-secondary">
-                    <div class="h3 fw-bold">I am Akinola Victor</div>
-                    <div class="h3 fw-bold">Glad to meet you</div>
-                </div>
-                <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
-                    website Look through some of my work and experience! If you like what you see and have a project you
-                    need coded, don't hesitate to contact me.</p>
-                <p class="text-primary fw-semibold">LET'S CONNECT</p>
-                <div>
-                    <div style="display: inline-block; text-align: center;" class="social-icons">
-                        <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
-                                class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
-                        <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp"
-                                style="color: #09fb72;"></i></a>
-                        <a target="_blank" href="https://github.com/Alphaboy20023"><i class="fa-brands fa-github"
-                                style="color: #191a19;"></i></a>
-                        <a href="mailto:timivictor565@gmail.com"><i class="fa-solid fa-envelope"
-                                style="color: #141415;"></i></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/victor-akinola-27a33b320/"><i
-                                class="fa-brands fa-linkedin" style="color: #3271b3;"></i></a>
+                    <div class="last-screen text-secondary">
+                        <div class="h3 fw-bold">I am Akinola Victor</div>
+                        <div class="h3 fw-bold">Glad to meet you</div>
+                    </div>
+                    <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
+                        website Look through some of my work and experience! If you like what you see and have a project
+                        you
+                        need coded, don't hesitate to contact me.</p>
+                    <p class="text-primary fw-semibold">LET'S CONNECT</p>
+                    <div style="padding-bottom: 70px;">
+                        <div style="display: inline-block; text-align: center;" class="social-icons">
+                            <a target="_blank" href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
+                                    class="fa-brands fa-x-twitter" style="color: #0f0f0f;"></i></a>
+                            <a href="https://wa.link/lakfbz"><i class="fa-brands fa-square-whatsapp"
+                                    style="color: #09fb72;"></i></a>
+                            <a target="_blank" href="https://github.com/Alphaboy20023"><i class="fa-brands fa-github"
+                                    style="color: #191a19;"></i></a>
+                            <a href="mailto:timivictor565@gmail.com"><i class="fa-solid fa-envelope"
+                                    style="color: #141415;"></i></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/victor-akinola-27a33b320/"><i
+                                    class="fa-brands fa-linkedin" style="color: #3271b3;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -723,9 +734,8 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1"
-                            href="file:///C:/Users/timiv/Desktop/CV%20Template%20-Torilo%20Academy%20-%20NEST%20(1).docx/CVTemplateToriloAcademyNEST_1_.docx.html"
-                            target="_blank">Get my Resume </a>
+                        <a class="btn btn-outline-primary mb-1" href="CV_Template.docx" target="_blank">Get my Resume
+                        </a>
                     </div>
                 </div>
                 <!--Collapse/Accordion-->
@@ -776,12 +786,19 @@
                             <div id="collapseTwo" class="accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <div style="width: 100%; height: 20%;" class="m-1">
-                                        <div class="victor p-2">
+                                    <div style="width: 100%; height: 20%;" class="m-2">
+                                        <div class="victor ">
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates p-2">
-                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px" width="auto">
+                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px"
+                                                    width="auto">
                                                 <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Bootstrap</p>
+                                            </div>
+                                            <div style="display: flex; flex-direction: column; width: 100%;"
+                                                class="flates p-2">
+                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px"
+                                                    width="auto">
+                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Tailwind</p>
                                             </div>
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates px-3">
@@ -790,11 +807,12 @@
                                                 <p class="fs-5 p-1 fw-semibold" style="color: #253858;">React</p>
                                             </div>
                                             <div style="display: flex; flex-direction: column; width: 100%;"
-                                            class="flates px-3">
-                                            <img src="./Img/django_main.jpeg" alt="CSS" height="50px" width="auto"
-                                                class="border-5">
-                                            <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django Rest  Framework.</p>
-                                        </div>
+                                                class="flates px-3">
+                                                <img src="./Img/django_main.jpeg" alt="CSS" height="50px" width="auto"
+                                                    class="border-5">
+                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django Rest
+                                                    Framework.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
