--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container_2" id="portfolio">
         <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light " id="Portfolio">
             <div class="container-fluid px-4">
-                <a class="navbar-brand text-primary fw-semibold fs-4" href="#">iam AkinolaVictor</a>
+                <a class="navbar-brand  fw-bold fs-4 logo" href="#">I Am AKINOLAVICTOR</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#top-navbar" aria-controls="top-navbar" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -60,10 +60,10 @@
                     </div>
                     <div class="scroll-content noDisplay px-5">
                         <div class="scroll-content-container">
-                            <h1 class="fw-semibold  scroll-content-container-text ">I am</h1>
+                            <h1 class="  scroll-content-container-text text-dark">I am</h1>
                             <ul class="scroll-content-container-list">
-                                <li class="scroll-content-container-list-item fs-1">Akinola Victor</li>
-                                <li class="scroll-content-container-list-item fs-1">Glad to meet you!</li>
+                                <li class="scroll-content-container-list-item fs-1 text-dark">Akinola Victor</li>
+                                <li class="scroll-content-container-list-item fs-1 text-dark">Glad to meet you!</li>
                             </ul>
                         </div>
                     </div>
@@ -71,10 +71,10 @@
                     <div>
                         <div class="yesDisplay">
                             <div class="wrapper">
-                                <div class="static-text">I am</div>
+                                <div class="static-text text-dark">I am</div>
                                 <div class="dynamic-text">
-                                    <li><span>Akinola Victor</span></li>
-                                    <li><span>Glad to meet you!</span></li>
+                                    <li class="text-dark "><span>Akinola Victor</span></li>
+                                    <li class="text-dark"><span>Glad to meet you!</span></li>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                         <div class="h3 fw-bold">I am Akinola Victor</div>
                         <div class="h3 fw-bold">Glad to meet you</div>
                     </div>
-                    <p class="fw-semibold">I am a Front-End Web developer! I can help you build a product , feature or
+                    <p class="fw-semibold fs-4">I am a Front-End Web developer! I can help you build a product , feature or
                         website Look through some of my work and experience! If you like what you see and have a project
                         you
                         need coded, don't hesitate to contact me.</p>
@@ -712,7 +712,7 @@
             <aside class=" d-flex">
                 <div class="p-2" style="width: 100%;">
                     <h1 class="fw-bold fs-40"> About Myself </h1>
-                    <h5 style="color: #344563;" class="fs-4">
+                    <h5 style="color: #344563;" class="fs-3">
                         Hello I'm a software developer! I can help you build a product , feature or website Look through
                         some of my work and experience! If you like what you see and have a project you need coded,
                         don't
@@ -734,8 +734,8 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1" href="CV_Template.docx" target="_blank">Get my Resume
-                        </a>
+                        <a class="btn btn-outline-primary mb-1" href="documents/CV Template .docx" target="_blank">Get
+                            my Resume </a>
                     </div>
                 </div>
                 <!--Collapse/Accordion-->
@@ -790,28 +790,22 @@
                                         <div class="victor ">
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates p-2">
-                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px"
+                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="80px"
                                                     width="auto">
-                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Bootstrap</p>
                                             </div>
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates p-2">
-                                                <img src="./Img/bootstrap_main.png" alt="CSS" height="70px"
-                                                    width="auto">
-                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Tailwind</p>
+                                                <img src="./Img/tailwind.png" alt="CSS" height="80px" width="auto">
                                             </div>
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates px-3">
-                                                <img src="./Img/react_main.png" alt="CSS" height="70px" width="auto"
+                                                <img src="./Img/react_main.png" alt="CSS" height="80px" width="auto"
                                                     class="border-5">
-                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">React</p>
                                             </div>
                                             <div style="display: flex; flex-direction: column; width: 100%;"
                                                 class="flates px-3">
-                                                <img src="./Img/django_main.jpeg" alt="CSS" height="50px" width="auto"
+                                                <img src="./Img/django_rest.png" alt="CSS" height="80px" width="auto"
                                                     class="border-5">
-                                                <p class="fs-5 p-1 fw-semibold" style="color: #253858;">Django Rest
-                                                    Framework.</p>
                                             </div>
                                         </div>
                                     </div>
