--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                                     <li class="fs-6 fw-semibold" style="color: #253858;">Frontend Web Developer</li>
                                     <li class="fs-6 fw-semibold" style="color: #253858;">Backend Web Developer</li>
                                     <li class="fs-6 fw-semibold" style="color: #253858;">REST APIs</li>
-                                    <li class="fs-6 fw-semibold" style="color: #253858;">MySQL</li>
+                                    <li class="fs-6 fw-semibold" style="color: #253858;">PostgreSQL</li>
                                     <li class="fs-6 fw-semibold" style="color: #253858;">Git, Github</li>
                                 </div>
                             </div>
