--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                         </div>
                     </div>
                     <div>
-                        <a class="btn btn-outline-primary mb-1" href="documents/My_CV_Template.docx" target="_blank">Get
+                        <a class="btn btn-outline-primary mb-1" href="documents/my_cv.docx" target="_blank">Get
                             my Resume </a>
                     </div>
                 </div>
