--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             <div class="containers ">
                 <div class="contents ">
                     <div class="portfolio-wrapper">
-                        <div class="moving-shadow-ring">
+                        <div class=" img-wrapper">
                             <img src="/img/me.jpg" alt="my_picture" class="portfolio-img">
                         </div>
                     </div>
                     <div class="scroll-content noDisplay px-5">
                         <div class="scroll-content-container">
-                            <h1 class="  scroll-content-container-text text-dark">I am</h1>
+                            <h1 class="  scroll-content-container-text text-dark fs-1">I am</h1>
                             <ul class="scroll-content-container-list">
-                                <li class="scroll-content-container-list-item fs-1 text-dark">Akinola Victor</li>
-                                <li class="scroll-content-container-list-item fs-1 text-dark">Glad to meet you!</li>
+                                <li class="scroll-content-container-list-item  fs-1">Akinola Victor</li>
+                                <li class="scroll-content-container-list-item fs-1">Glad to meet you!</li>
                             </ul>
                         </div>
                     </div>
