--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container_2" id="portfolio">
-        <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light " id="Portfolio">
+        <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light mb-2" id="Portfolio">
             <div class="container-fluid px-4">
                 <a class="navbar-brand  fw-bold fs-4 logo" href="#">I Am AKINOLAVICTOR</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
@@ -53,11 +53,7 @@
         <div class="image_set">
             <div class="containers ">
                 <div class="contents ">
-                    <div class="portfolio-wrapper">
-                        <div class=" img-wrapper">
-                            <img src="/img/me.jpg" alt="my_picture" class="portfolio-img">
-                        </div>
-                    </div>
+                    <img src="/img/me.jpg" alt="my_picture" class="circular-image">
                     <div class="scroll-content noDisplay px-5">
                         <div class="scroll-content-container">
                             <h1 class="  scroll-content-container-text text-dark fs-1">I am</h1>
@@ -71,10 +67,9 @@
                     <div>
                         <div class="yesDisplay">
                             <div class="wrapper">
-                                <div class="static-text text-dark">I am</div>
+                                <div class="static-text">I AM</div>
                                 <div class="dynamic-text">
-                                    <li class="text-dark "><span>Akinola Victor</span></li>
-                                    <li class="text-dark"><span>Glad to meet you!</span></li>
+                                    <span class="typing-text"></span>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +78,8 @@
                         <div class="h3 fw-bold">I am Akinola Victor</div>
                         <div class="h3 fw-bold">Glad to meet you</div>
                     </div>
-                    <p class="fw-semibold fs-4">I am a Front-End Web developer! I can help you build a product , feature or
+                    <p class="fw-semibold fs-4">I am a Front-End Web developer! I can help you build a product , feature
+                        or
                         website Look through some of my work and experience! If you like what you see and have a project
                         you
                         need coded, don't hesitate to contact me.</p>
@@ -867,6 +863,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
+    <script src="index.js"></script>
     <script>
         function closeNavbar() {
             const topNavbar = document.getElementById('top-navbar');
