--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container_2" id="portfolio">
         <nav class="navbar navbar-expand-lg py-2 fixed-top bg-light mb-2" id="Portfolio">
             <div class="container-fluid px-4">
-                <a class="navbar-brand  fw-bold fs-4 logo" href="#">I Am AKINOLAVICTOR</a>
+                <P class="navbar-brand  fw-bold fs-4 logo">I Am AKINOLAVICTOR</P>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#top-navbar" aria-controls="top-navbar" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -181,7 +181,8 @@
                     <div class="modal-body p-3 d-none d-md-block">
                         <h1 class="fw-bold fs-2">360 Agency Design</h1>
                         <p class="fs-4">
-                            Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web Developer</span>
+                            Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web
+                                Developer</span>
                             <i class='bx bxs-circle'></i> <span class="text-secondary">2025</span>
                         </p>
 
@@ -281,8 +282,8 @@
                     <h1 class="fw-bold fs-1">360 Agency</h1>
                     <div style="width: 100%;">
                         <p class="fs-4">Design 360 <i class='bx bxs-circle'> </i><span class="text-secondary fs-5">
-                            Front-End Dev
-                        </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5">2025</p>
+                                Front-End Dev
+                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5">2025</p>
                     </div>
                     <p class="fs-5 fw-semibold text-secondary">
                         It designs your websites, which are your face in the online world. It offers
@@ -312,8 +313,8 @@
                     <div class="w-50">
                         <h1 class="fw-bold fs-40"><span class="text-primary">Get</span>Change</h1>
                         <div style="width: 100%;">
-                            <p class="fs-4">REACT-REDUX <i class='bx bxs-circle'> </i><span
-                                    class="text-secondary"> Front-End dev
+                            <p class="fs-4">REACT-REDUX <i class='bx bxs-circle'> </i><span class="text-secondary">
+                                    Front-End dev
                                 </span><i class='bx bxs-circle'></i><span class="text-secondary"> 2025
                             </p>
                         </div>
@@ -393,14 +394,14 @@
                     <div class="modal-body p-3 d-block d-md-none">
                         <h1 class="fw-bold fs-2">360 Agency</h1>
                         <p class="fs-5 ">
-                            Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web Dev</span>
+                            Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web
+                                Dev</span>
                             <i class='bx bxs-circle'></i> <span class="text-secondary">2015</span>
                         </p>
 
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="./Img/Agency360.png" class="img-fluid d-block d-md-none p-3"
-                                    alt="Mobile" />
+                                <img src="./Img/Agency360.png" class="img-fluid d-block d-md-none p-3" alt="Mobile" />
                             </div>
 
                             <div class="col-md-6 d-flex flex-column justify-content-between">
@@ -433,82 +434,168 @@
     </section>
 
 
-    <!--Desktop screen3 -->
-    <div class="wrap noDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
-            <div style="width: 100%;">
-                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3"
-                    style="width: 100%;">
-            </div>
-            <div class="p-3" style="width: 100%;">
-                <h1 class="fw-bold fs-40">Facebook 360</h1>
-                <span>
-                    <p class="fs-4"> Facebook <i class='bx bxs-circle'></i> <span class="text-secondary">Full Stack Dev
-                        </span> <i class='bx bxs-circle'></i> <span class="text-secondary">2015</p>
-                </span>
-                <h5 style="color: #344563;" class="fs-4">
-                    Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy
-                    360 photos and videos on Gear VR.
-                </h5>
-                <section class="sect">
-                    <span class=" cond fw-semibold">html</span>
-                    <span class=" cond fw-semibold">css</span>
-                    <span class=" cond fw-semibold">Ruby on rails</span>
-                    <span class=" cond fw-semibold">javascript</span>
-                </section>
-                <br>
-                <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                    See project
-                </button>
-                <!--Desktop screen3 Modal-->
-                <div class="modal fade " id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false"
-                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm" style="max-width: 968px;height: 120vh;">
-                        <div class="modal-content p-3 ">
-                            <button type="button " class="btn-close styleIt" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                            <div class="modal-body p-1">
-                                <div class="">
-                                    <h1 class="fw-bold fs-40">Facebook 360</h1>
-                                    <p class="fs-4">FACEBOOK<i class='bx bxs-circle'></i> <span
-                                            class="text-secondary">Back
-                                            End Dev</span> <i class='bx bxs-circle'></i> <span
-                                            class="text-secondary">2015
-                                    </p>
+
+    <section>
+        <div class="wrap ">
+            <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+
+                <div class="w-100 d-block d-md-none">
+                    <!-- Mobile image -->
+                    <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-block d-md-none p-3" alt="Mobile Image" />
+                </div>
+
+                <!-- Mobile Info -->
+                <div class="p-3 d-block d-md-none" style="width: 100%;">
+                    <h1 class="fw-bold fs-40">Uber Navigation</h1>
+                    <div style="width: 100%;">
+                        <p class="fs-5 font-semibold">Uber <i class='bx bxs-circle'> </i><span
+                                class="text-secondary fs-5"> Lead Developer
+                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2018
+                        </p>
+                    </div>
+                    <h5 style="color: #344563;" class="fs-4">
+                        A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive
+                        computer: your car.
+                    </h5>
+                    <section class=" d-flex flex-wrap gap-2 mb-3">
+                        <span class="cond fw-semibold">HTML</span>
+                        <span class="cond fw-semibold">Bootstrap CSS</span>
+                        <span class="cond fw-semibold">JavaScript</span>
+                        <span class="cond fw-semibold">Python</span>
+                    </section>
+                    <button type="button" class="btn btn-primary mt-3 botn " data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropUnion">
+                        See project
+                    </button>
+                </div>
+
+
+                <!-- Desktop Info -->
+                <div class="p-3 d-none d-md-block" style="width: 100%;">
+                    <h1 class="fw-bold fs-1">Facebook 360</h1>
+                    <p class="fs-2 ">
+                        Facebook <i class='bx bxs-circle'></i> <span class="text-secondary">Full-Stack dev</span>
+                        <i class='bx bxs-circle'></i> <span class="text-secondary">2025</span>
+                    </p>
+
+                    <p class="fs-2 text-secondary">
+                        Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and
+                        enjoy 360 photos and videos on Gear VR.
+                    </p>
+                    <section class="d-flex flex-wrap gap-2 mb-3">
+                        <span class="cond fw-semibold">HTML</span>
+                        <span class="cond fw-semibold">CSS</span>
+                        <span class="cond fw-semibold">JavaScript</span>
+                        <span class="cond fw-semibold">Ruby on rails</span>
+                    </section>
+                    <button type="button" class="btn btn-primary mt-3 botn " data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropUnion">
+                        See project
+                    </button>
+                </div>
+                <div class="w-100 d-none d-md-block">
+                    <!-- Desktop image -->
+                    <img src="./Img/Snapshoot Portfolio3.png" class="img-fluid d-none d-md-block p-3"
+                        alt="Desktop Image" width="100%" height="95%" class="mt-3" />
+                </div>
+            </aside>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdropUnion" data-bs-backdrop="static" data-bs-keyboard="false"
+            tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-lg" style="max-width: 968px;">
+                <div class="modal-content p-3">
+                    <button type="button" class="btn-close styleIt" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                    <!-- desktop Modal -->
+                    <div class="modal-body p-3 d-none d-md-block">
+                        <h1 class="fw-bold fs-2">Facebook 360</h1>
+                        <p class="fs-4">
+                            Facebook <i class='bx bxs-circle'></i> <span class="text-secondary">Full-Stack
+                                Developer</span>
+                            <i class='bx bxs-circle'></i> <span class="text-secondary">2025</span>
+                        </p>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <!-- image -->
+                                <img src="./Img/Snapshoot Portfolio3.png" class="img-fluid d-none d-md-block p-3"
+                                    alt="Desktop" />
+                            </div>
+
+                            <div class="col-md-6 d-flex flex-column justify-content-between">
+                                <p class="fs-5 fw-semibold text-secondary">
+                                    Exploring the future of media in Facebook's first Virtual Reality app; a place to
+                                    discover and enjoy 360 photos and videos on Gear VR.
+                                </p>
+
+                                <div class="d-flex flex-wrap gap-2 mb-3">
+                                    <span class="cond fw-semibold p-2">HTML</span>
+                                    <span class="cond fw-semibold p-2">css</span>
+                                    <span class="cond fw-semibold p-2">JavaScript</span>
+                                    <span class="cond fw-semibold p-2">Ruby on rails</span>
                                 </div>
-                                <div style="width: 100%;">
-                                    <img src="./Img/Snapshoot Portfolio3.png" alt="" width="100%" height="50%"
-                                        class="p-3" style="width: 100%; height: 50%;">
+
+                                <div class="d-flex gap-2 flex-wrap">
+                                    <a class="btn btn-primary">
+                                        See live <img src="Icon.png" alt="" />
+                                    </a>
+                                    <a class="btn btn-outline-secondary">
+                                        See source <img src="Frame.png" alt="" />
+                                    </a>
                                 </div>
-                                <div class="d-flex" style="height: 100%;">
-                                    <h5 style="color: #344563;" class="fs-4">
-                                        Exploring the future of media in Facebook's first Virtual Reality app; a place
-                                        to discover and enjoy
-                                        360 photos and videos on Gear VR.
-                                    </h5>
-                                    <div class="sect0" style="flex-wrap: wrap; max-width: 100%;">
-                                        <span class=" cond fw-semibold p-1">html</span>
-                                        <span class=" cond fw-semibold p-1">css</span>
-                                        <span class=" cond fw-semibold p-1">Javascript</span>
-                                        <div class="box">
-                                            <span class=" cond fw-semibold p-1">Ruby on rails</span>
-                                        </div>
-                                        <div class="box3 border-top m-2">
-                                            <button type="button" class="botn02">see live <img src="Icon.png"
-                                                    alt=""></button>
-                                            <button type="button" class="botn2">See source <img src="Frame.png"
-                                                    alt=""></button>
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Mobile Modal -->
+                    <div class="modal-body p-3 d-block d-md-none">
+                        <h1 class="fw-bold ">Uber Navigation</h1>
+                        <div style="width: 100%;">
+                            <p class="fs-5 font-semibold">Uber <i class='bx bxs-circle'> </i><span
+                                    class="text-secondary fs-5"> Lead Developer
+                                </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2018
+                            </p>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <!-- Responsive image inside modal too -->
+                                <img src="./Img/Snapshoot Portfolio.png" class="img-fluid d-block d-md-none p-3"
+                                    alt="Mobile" />
+                            </div>
+
+                            <div class="col-md-6 d-flex flex-column justify-content-between">
+                                <p class="fs-5 fw-semibold text-secondary">
+                                    A smart assistant to make driving more safe, efficient, and fun by unlocking your
+                                    most expensive computer: your car.
+                                </p>
+
+                                <div class="d-flex flex-wrap gap-2 mb-3">
+                                    <span class="cond fw-semibold p-2">HTML</span>
+                                    <span class="cond fw-semibold p-2">Bootstrap CSS</span>
+                                    <span class="cond fw-semibold p-2">JavaScript</span>
+                                    <span class="cond fw-semibold p-2">Python</span>
+                                </div>
+
+                                <div class="d-flex gap-2 flex-wrap">
+                                    <a
+                                        class="btn btn-primary">
+                                        See live <img src="Icon.png" alt="" />
+                                    </a>
+                                    <a class="btn btn-outline-secondary"
+                                        >
+                                        See source <img src="Frame.png" alt="" />
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-        </aside>
-    </div>
+        </div>
+    </section>
 
     <!--Mobile screen4-->
     <div class="wraps yesDisplay">
