--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div style="width: 100%;">
                         <p class="fs-5 font-semibold">REACT-REDUX <i class='bx bxs-circle'> </i><span
                                 class="text-secondary fs-5"> Front-End app
-                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2015
+                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2025
                         </p>
                     </div>
                     <h5 style="color: #344563;" class="fs-4">
@@ -144,12 +144,11 @@
                     <h1 class="fw-bold fs-1">360 Agency</h1>
                     <p class="fs-2 ">
                         Design <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web Developer</span>
-                        <i class='bx bxs-circle'></i> <span class="text-secondary">2025</span>
+                        <i class='bx bxs-circle'></i> <span class="text-secondary">2024</span>
                     </p>
 
                     <p class="fs-2 text-secondary">
-                        It designs your websites, which are your face in the online world. It offers solutions to all
-                        your
+                        It designs your websites, which are your face in the online world. It offers solutions to all your
                         needs, including e-commerce sites.
                     </p>
                     <section class="d-flex flex-wrap gap-2 mb-3">
@@ -183,7 +182,7 @@
                         <p class="fs-4">
                             Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web
                                 Developer</span>
-                            <i class='bx bxs-circle'></i> <span class="text-secondary">2025</span>
+                            <i class='bx bxs-circle'></i> <span class="text-secondary">2024</span>
                         </p>
 
                         <div class="row">
@@ -224,7 +223,7 @@
                         <div style="width: 100%;">
                             <p class="fs-5 font-semibold">REACT-REDUX <i class='bx bxs-circle'> </i><span
                                     class="text-secondary fs-5"> Front-End Dev
-                                </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2015
+                                </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5"> 2025
                             </p>
                         </div>
 
@@ -283,12 +282,11 @@
                     <div style="width: 100%;">
                         <p class="fs-4">Design 360 <i class='bx bxs-circle'> </i><span class="text-secondary fs-5">
                                 Front-End Dev
-                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5">2025</p>
+                            </span><i class='bx bxs-circle'></i><span class="text-secondary fs-5">2024</p>
                     </div>
                     <p class="fs-5 fw-semibold text-secondary">
                         It designs your websites, which are your face in the online world. It offers
-                        solutions
-                        to all your needs, including e-commerce sites.
+                        solutions to all your needs, including e-commerce sites.
                     </p>
                     <section class="d-flex flex-wrap gap-2 mb-3">
                         <span class="cond fw-semibold">html</span>
@@ -396,7 +394,7 @@
                         <p class="fs-5 ">
                             Design 360 <i class='bx bxs-circle'></i> <span class="text-secondary">Front-End Web
                                 Dev</span>
-                            <i class='bx bxs-circle'></i> <span class="text-secondary">2015</span>
+                            <i class='bx bxs-circle'></i> <span class="text-secondary">2024</span>
                         </p>
 
                         <div class="row">
@@ -729,13 +727,15 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="./Img/Snapshoot Portfolio 01.png" class="img-fluid d-block d-md-none p-3" alt="Mobile" />
+                                <img src="./Img/Snapshoot Portfolio 01.png" class="img-fluid d-block d-md-none p-3"
+                                    alt="Mobile" />
                             </div>
 
                             <div class="col-md-6 d-flex flex-column justify-content-between">
                                 <p class="fs-5 fw-semibold text-secondary">
-                                    It designs your websites, which are your face in the online world. It offers
-                                    solutions to all your needs, including e-commerce sites.
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+                                    1500s, when an unknown printer took a galley of type and scrambled it 1960s.
                                 </p>
 
                                 <div class="d-flex flex-wrap gap-2 mb-3">
@@ -749,8 +749,7 @@
                                     <a class="btn btn-primary">
                                         See live <img src="Icon.png" alt="" />
                                     </a>
-                                    <a 
-                                        class="btn btn-outline-secondary">
+                                    <a class="btn btn-outline-secondary">
                                         See source <img src="Frame.png" alt="" />
                                     </a>
                                 </div>
